# postgresql-maximalism

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  init-db.sql  nginx.template.conf
notebooks/: analytics.ipynb  pgmq.ipynb  pyproject.toml  visualization.ipynb
scripts/: backup_embeddings.sh  graph_load.sh  restore_embeddings.sh
sql/: 01-elt.sql  02-analytics.sql
sql/01-documents/: 01-data.sql  02-pg_jsonschema.sql  03-json_generation.sql
sql/02-analytics/: 00-pre.sql  01-data.sql  01-elt.sql  02-analytics.sql  99-post.sql
sql/02-analytics/pgbench/: q1-columnar.sql  q1-relational.sql  q2-columnar.sql  q2-relational.sql  run_benchmark.sh
sql/03-timeseries/: 01-data.sql  02-analytics.sql  02-policies.sql  02-preparation.sql  03-features.sql  04-anomaly_detection.sql  04-normalization.sql  05-anomaly_detection.sql
sql/04-ai/: 00-pre.sql  01-data.sql  02-embedding.sql  03-recommendation.sql  03-recommendations.sql  04-rag.sql  99-post.sql
sql/05-search/: 01-data.sql  01-documents.sql  02-builtin.sql  03-pg_search.sql  03-pg_trgm.sql
sql/06-graphs/: 01-data.sql  02-analysis.sql
sql/07-mq/: 01-data.sql  02-operations.sql
