[project]
name = "notebooks"
version = "0.1.0"
description = "PostgreSQL Maximalism companion notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "connectorx>=0.4.3",
    "deltalake>=0.25.5",
    "duckdb>=1.2.2",
    "jupyter>=1.1.1",
    "polars>=1.29.0",
    "python-dotenv>=1.1.0",
    "s3fs>=2025.3.2",
    "s3path>=0.6.1",
]
