[project]
name = "notebooks"
version = "0.1.0"
description = "PostgreSQL Maximalism companion notebooks"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "duckdb>=1.2.2",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.1",
    "nbdime>=4.0.2",
    "networkx>=3.4.2",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.40",
]
